Update organization references to hornmichi
- Replace all 'your-org' references with 'hornmichi'
- Update email addresses to use hornmichi.com domain
- Update GitHub Pages URLs to point to hornmichi/Cloud-News
- Update package.json author field

--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "github",
     "automation"
   ],
-  "author": "Your Organization",
+  "author": "hornmichi",
   "license": "MIT",
   "devDependencies": {
     "http-server": "^14.1.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/cloud-news.git"
+    "url": "https://github.com/hornmichi/cloud-news.git"
   },
-  "homepage": "https://your-org.github.io/cloud-news/"
+  "homepage": "https://hornmichi.github.io/cloud-news/"
 }
